[package]
name = "rust-g"
edition = "2018"
version = "0.4.5-P2"
authors = ["Bjorn Neergaard <bjorn@neersighted.com>"]
repository = "https://github.com/ParadiseSS13/rust-g"
license-file = "LICENSE"
description = "Offloaded task library for the Paradise SS13 codebase. Adapted from /tg/station13"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

[dependencies]
failure = "0.1"
chrono = { version = "0.4", optional = true }
crypto-hash = { version = "0.3", optional = true }
hex = { version = "0.4", optional = true }
percent-encoding = { version = "2.1", optional = true }
url-dep = { version = "2.1", package = "url", optional = true }
png = { version = "0.16", optional = true }
noise = { version = "0.6", optional = true}
reqwest = { version = "0.11.3", optional = true, default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
once_cell = { version = "1.4", optional = true }
mysql = { version = "19.0", optional = true }
dashmap = { version = "3.11", optional = true }
simple-logging = { version = "2.0.2", optional = true}
log = { version = "0.4.14", optional = true }
log-panics = { version = "2", features = ["with-backtrace"], optional = true }
ctor = "0.1.20"
workerpool = "1.2.0"

[features]
default = ["dmi", "logf", "http", "sql", "noise", "feature-log-panics"]
dmi = ["png"]
file = []
hash = ["crypto-hash", "hex"]
logf = ["chrono"]
url = ["url-dep", "percent-encoding"]
http = ["reqwest", "serde", "serde_json", "serde_derive", "once_cell"]
sql = ["mysql", "serde", "serde_derive", "serde_json", "once_cell", "dashmap"]
feature-log-panics = ["log", "simple-logging", "log-panics"]